<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_action_document"
        android:icon="@drawable/ic_document"
        android:title="@string/document" />

    <item
        android:id="@+id/bottom_action_situation"
        android:icon="@drawable/ic_situation"
        android:title="@string/situations" />

    <item
        android:id="@+id/bottom_action_choose"
        android:icon="@drawable/ic_check"
        android:title="@string/choose" />

    <item
        android:id="@+id/bottom_action_email"
        android:icon="@drawable/ic_email"
        android:title="@string/email" />

    <item
        android:id="@+id/bottom_action_subject"
        android:icon="@drawable/ic_subject"
        android:title="@string/subject" />
</menu>